# docs/swagger.json
@@ -1320,7 +1320,7 @@
                     },
                     {
                         "type": "string",
-                        "example": "{\"name\":\"villa name\",\"description\":\"villa description\",\"min_guest\":1,\"bedrooms\":1,\"price\":25,\"location_id\":3,\"category_id\":2,\"baths\":1}",
+                        "example": "{\"name\":\"villa name\",\"description\":\"villa description\",\"min_guest\":1,\"bedrooms\":1,\"price\":25,\"location_id\":3,\"category_id\":2,\"baths\":1,\"amenity_id\":4}",
                         "description": "CreateVillaProp JSON string",
                         "name": "properties",
                         "in": "formData",
@@ -1807,6 +1807,20 @@
                 }
             }
         },
+        "repository.SelectedAmenity": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "type": {
+                    "$ref": "#/definitions/repository.SelectedType"
+                }
+            }
+        },
         "repository.SelectedCategory": {
             "type": "object",
             "properties": {
@@ -1857,6 +1871,9 @@
         "repository.Villa": {
             "type": "object",
             "properties": {
+                "amentiy": {
+                    "$ref": "#/definitions/repository.SelectedAmenity"
+                },
                 "baths": {
                     "type": "integer"
                 },
